@@ -2,9 +2,9 @@
 export uniform int width() { return programCount; }
 
 export void f_f(uniform float RET[], uniform float aFOO[]) {
-    uniform int a[programCount];
+    uniform unsigned int a[programCount];
     a[programIndex] = aFOO[programIndex];
-    int aa;
+    unsigned int aa;
     packed_load_active(a, 0, aa);
     RET[programIndex] = aa;
 }
